add class so the styling will be overriden

--- a/zapisy/apps/users/templates/users/my_profile.html
+++ b/zapisy/apps/users/templates/users/my_profile.html
@@ -10,7 +10,7 @@
 {% block all-content %}
     <div class="mb-5">
         <h2>Moje dane</h2>
-        <table class="table table-condensed">
+        <table class="table table-condensed" id="table-info">
             <colgroup>
                 <col class="table-info-type"></col>
                 <col></col>
