--- a/zapisy/apps/users/templates/users/student_profile_contents.html
+++ b/zapisy/apps/users/templates/users/student_profile_contents.html
@@ -2,7 +2,7 @@
 
 <div id="student-profile">
 	<h3 class="subheader">{{student.get_full_name}}</h3>
-	<table class="table table-condensed">
+	<table class="table table-condensed" id="table-info">
 			<colgroup>
 				<col class="table-info-type"></col>
 				<col></col>
