przywrócono bezużyteczny endpoint
żeby django się odczepił

--- a/zapisy/apps/theses/templates/theses/thesis_form.html
+++ b/zapisy/apps/theses/templates/theses/thesis_form.html
@@ -45,7 +45,7 @@
     <form method="POST" id="confirm-submit" class="post-form">
         {% csrf_token %}
         {% crispy thesis_form %}
-        <input type="hidden" id="ajax-url" value='{% url "theses:students" %}' />
+        <input type="hidden" id="ajax-url" value="{% url 'theses:students' %}" />
         {% render_bundle 'theses-student-search' %} 
     </form>
     {% if confirm_changes %}
